--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Photogie</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">A free place to upload your wonderful photos!</h2>
-                    <a class="btn btn-primary js-scroll-trigger" href="#about">Login</a>
+                    <a class="btn btn-primary js-scroll-trigger" href="upload.html">UPLOAD</a>
                 </div>
             </div>
         </header>
