--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet"/>
+
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
       
-        <link href="public/assets/css/styles.css" rel="stylesheet" />
+        <link href="./public/assets/css/styles.css" rel="stylesheet"/>
+
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -23,8 +25,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Sign Up</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Sign Up</a></li>
                     </ul>
                 </div>
             </div>
@@ -33,7 +35,8 @@
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Photogie</h1>
+                    <!-- <h1 class="mx-auto my-0 text-uppercase">Photogie</h1> -->
+                    <h1 class="mx-auto my-0 text-uppercase"><img src="./public/assets/web-img/Photogie-Logo-Full2.png"></h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">A free place to upload your wonderful photos!</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="upload.html">UPLOAD</a>
                 </div>
