--- a/img.html
+++ b/img.html
@@ -16,11 +16,4 @@
         <link href="public/assets/css/styles.css" rel="stylesheet" />
     </head>
 
-
-<form method="post" enctype="multipart/form-data" action="/upload">
-    <input type="file" name="file">
-    <input type="submit" value="Submit" href="img.html">
-</form>
-
-</body>
-</html>
+<img src="/image.png" />
