--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Sign Up</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/public/signup.html">Sign Up</a></li>
                     </ul>
                 </div>
             </div>
@@ -62,8 +62,8 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="img/pumpkin.jpeg" alt="" /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Show us what you've got!</p>
+                            <h4></h4>
+                            <p class="text-black-50 mb-0">Fall photography in a pumpkin patch!</p>
                         </div>
                     </div>
                 </div>
@@ -74,8 +74,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Write here</h4>
-                                    <p class="mb-0 text-white-50">asjsjsjsjsjs.</p>
+                                    <h4 class="text-white">Winter Wonderland</h4>
+                                    <p class="mb-0 text-white-50"></p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
@@ -89,8 +89,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Write here</h4>
-                                    <p class="mb-0 text-white-50">dkdjdjsahhshs</p>
+                                    <h4 class="text-white">Hello Spring</h4>
+                                    <p class="mb-0 text-white-50"></p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
