--- a/upload.html
+++ b/upload.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Sign Up</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Home</a></li>
                 </ul>
             </div>
         </div>
@@ -44,22 +44,25 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-4">
-                <h2 class="text-white-50 mx-auto mt-2 mb-5"><input type="text" name="photographer_name">Photographer's name</h2>
+                <h2 class="text-dark-50 mx-auto mt-2 mb-5"><input type="text" name="photographer_name">Photographer's name</h2>
                 </div>
                 <div class="col-md-4">
-                <h2 class="text-white-50 mx-auto mt-2 mb-5"><input type="text" name="photo_name">Photo Name</h2>
+                <h2 class="text-dark-50 mx-auto mt-2 mb-5"><input type="text" name="photo_name">Photo Name</h2>
                 </div>
                 <div class="col-md-2"></div>
             </div>
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-4">
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5"><input type="text" name="photo_description">Photo Description</h2>
+                    <h2 class="text-dark-50 mx-auto mt-2 mb-5"><input type="text" name="photo_description">Photo Description</h2>
                 </div>
                 <div class="col-md-4">
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5"><input type="file" name="file"></h2>
-                    <input type="submit" value="Submit">
+                    <h2 class="text-dark-50 mx-auto mt-2 mb-5"><input type="file" name="file"></h2>
+                    <a  type="submit" value="Submit" href="img.html">Upload</a>
+
+                    <!-- <a href="img.html">Submit</a> -->
                 </div>
+            
                 <div class="col-md-2"></div>
             </div>
             </form>
