--- a/public/upload.html
+++ b/public/upload.html
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet" />
 
-    <link href="./public/assets/css/styles.css" rel="stylesheet" />
+    <link href="/public/assets/css/styles.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
@@ -74,7 +74,7 @@
             </form>
         </div>
     </header>
-
+    <script src="./assets/js/upload.js"></script>
 </body>
 
 </html>
