--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Project2 Photogie</title>
-        <link rel="icon" type="image/x-icon" href="./public/assets/web-img/favicon.png" />
+        <link rel="icon" type="image/x-icon" href="/assets/web-img/favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -14,7 +14,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
       
-        <link href="./public/assets/css/styles.css" rel="stylesheet"/>
+        <link href="/assets/css/styles.css" rel="stylesheet"/>
 
     </head>
     <body id="page-top">
@@ -26,7 +26,6 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/public/signup.html">Sign Up</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,7 +35,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <!-- <h1 class="mx-auto my-0 text-uppercase">Photogie</h1> -->
-                    <h1 class="mx-auto my-0 text-uppercase"><img src="./public/assets/web-img/Photogie-Logo-Full2.png"></h1>
+                    <h1 class="mx-auto my-0 text-uppercase"><img src="/assets/web-img/Photogie-Logo-Full2.png"></h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">A free place to upload your wonderful photos!</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="upload.html">UPLOAD</a>
                 </div>
@@ -51,7 +50,7 @@
                         <p class="text-white-50">This is a free platform for your to share your photography with the world</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
                     </div>
                 </div>
-                <img class="img-fluid" src="img/Sendit.jpeg" alt="" />
+                <img class="img-fluid" src="/assets/web-img/Sendit.jpeg" alt="" />
             </div>
         </section>
         <!-- Projects-->
@@ -59,7 +58,7 @@
             <div class="container">
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="img/pumpkin.jpeg" alt="" /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="/assets/web-img/pumpkin.jpeg" alt="" /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4></h4>
@@ -69,7 +68,7 @@
                 </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="img/winter.jpeg" alt="" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="/assets/web-img/winter.jpeg" alt="" /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -84,7 +83,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="img/spring.jpeg" alt="" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="/assets/web-img/spring.jpeg" alt="" /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
