--- a/public/upload.html
+++ b/public/upload.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Project2 Photogie</title>
-    <link rel="icon" type="image/x-icon" href="./public/assets/web-img/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/assets/web-img/favicon.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet" />
 
-    <link href="/public/assets/css/styles.css" rel="stylesheet" />
+    <link href="/assets/css/styles.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
@@ -29,9 +29,9 @@
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">Menu<i class="fas fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <a href="./index.html"><img src="./public/assets/web-img/Photogie-Logo-Full7.png"></a>
+                <a href="index.html"><img src="/assets/web-img/Photogie-Logo-Full7.png"></a>
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./index.html"><img src="./public/assets/web-img/home-Full7.png"></a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html"><img src="/assets/web-img/home-Full7.png"></a></li>
                 </ul>
             </div>
         </div>
@@ -74,7 +74,7 @@
             </form>
         </div>
     </header>
-    <script src="./assets/js/upload.js"></script>
+    <script src="/assets/js/upload.js"></script>
 </body>
 
 </html>
