updating html links and images.

--- a/public/upload.html
+++ b/public/upload.html
@@ -74,7 +74,7 @@
             </form>
         </div>
     </header>
-    <script src="/assets/js/upload.js"></script>
+    <script src="./assets/js/upload.js"></script>
 </body>
 
 </html>
