--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                         <p class="text-white-50">This is a free platform for your to share your photography with the world</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
                     </div>
                 </div>
-                <img class="img-fluid" src="/assets/web-img/Sendit.jpeg" alt="" />
+                <img class="img-fluid" src="/assets/web-img/Yellowstone.jpg" alt="" />
             </div>
         </section>
         <!-- Projects-->
@@ -58,24 +58,26 @@
             <div class="container">
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="/assets/web-img/pumpkin.jpeg" alt="" /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="/assets/web-img/Oceanside.jpg" alt="" /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4></h4>
-                            <p class="text-black-50 mb-0">Fall photography in a pumpkin patch!</p>
+                            <p class="text-black-50 mb-0">Backup your photos and keep your memories safe.</p>
                         </div>
                     </div>
                 </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="/assets/web-img/winter.jpeg" alt="" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="/assets/web-img/Road.jpg" alt="" /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Winter Wonderland</h4>
+                                    <h4 class="text-white">Create a sharable portfolio </h4>
                                     <p class="mb-0 text-white-50"></p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
+                                    <br>
+                                    <br>
                                 </div>
                             </div>
                         </div>
@@ -83,12 +85,12 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="/assets/web-img/spring.jpeg" alt="" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="/assets/web-img/BryceCanyonHDR.jpg" alt="" /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Hello Spring</h4>
+                                    <h4 class="text-white">Organize your pictures </h4>
                                     <p class="mb-0 text-white-50"></p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
