--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
       
-        <link href="./public/assets/css/styles.css" rel="stylesheet"/>
+        <link href="/assets/css/styles.css" rel="stylesheet"/>
 
     </head>
     <body id="page-top">
@@ -51,7 +51,7 @@
                         <p class="text-white-50">This is a free platform for your to share your photography with the world</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
                     </div>
                 </div>
-                <img class="img-fluid" src="img/Sendit.jpeg" alt="" />
+                <img class="img-fluid" src="/Sendit.jpeg" alt="" />
             </div>
         </section>
         <!-- Projects-->
